Fixed an UI issue causing file selected can be hard to see

--- a/AnimationEditor/css/index.css
+++ b/AnimationEditor/css/index.css
@@ -315,3 +315,8 @@ textarea {
     transform: rotateX(760deg);
   }
 }
+
+.file-name {
+  font-size: 20px;
+  color: rgba(63, 66, 99, 0.63);
+}
